Refactor: Replace switch expressions with statements for compatibility and cleanup outdated constructs.